# idgit

./: Cargo.toml
src/: diff.rs  file.rs  lib.rs  repo.rs
tests/: test.rs
