[package]
name = "idgit"
version = "0.1.0"
authors = ["Daniel Franklin <daniel@danielzfranklin.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tui = "0.14.0"
git2 = "0.13.18"
undo = "0.46.0"
tracing = "0.1.25"
thiserror = "1.0.24"
displaydoc = "0.2.1"
libgit2-sys = "0.12.19"

[dev-dependencies]
tempfile = "3.2.0"
cmd_lib = "1.0.10"
tracing-subscriber = "0.2.17"
rand = "0.8.3"

[path.crate-io]
# To get <https://github.com/rust-lang/git2-rs/pull/699>
git2 = { git = "https://github.com/danielzfranklin/git2-rs", branch = "use-euser" }
